<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".CreateCard">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_details"
        android:textStyle="bold"
        android:textColor="#CDB8E6"
        android:textSize="32sp"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:shadowColor="#160D27"
        android:paddingBottom="40dp"
        android:shadowDx="7"
        android:shadowDy="7"
        android:shadowRadius="10"/>

    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/enter_task"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:background="@drawable/custom_edittetext"
        android:textColorHint="#D1BDF6"
        android:textColor="@color/purple_500"
        android:shadowRadius="25"
        android:shadowDy="5"
        android:shadowDx="5"
        android:shadowColor="@color/black"
        />

    <EditText
        android:id="@+id/create_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/priority"
        android:padding="15dp"
        android:background="@drawable/custom_edittetext"
        android:textColorHint="#D0BCF5"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:shadowRadius="25"
        android:shadowDy="5"
        android:shadowDx="5"
        android:shadowColor="@color/black"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"> <!-- Adjust the elevation for the shadow -->

        <Button
            android:id="@+id/save_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/save"
            android:background="@drawable/rounded_button_background"
            android:shadowRadius="25"
            android:shadowDy="5"
            android:shadowDx="5"
            android:shadowColor="@color/black"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>
